# kdeconnect-rs

./: .gitignore  Cargo.toml  README.md  config.toml
kdeconnect/: Cargo.toml
kdeconnect/src/: cache.rs  config.rs  context.rs  device.rs  event.rs  logging.rs  main.rs  packet.rs  tls.rs  tray.rs  utils.rs  window.rs
kdeconnect/src/device/: handle.rs  manager.rs  mod.rs
kdeconnect/src/platform_listener/: clipboard.rs  mod.rs  mpris.rs  windows.rs
kdeconnect/src/plugin/: battery.rs  clipboard.rs  connectivity_report.rs  input_receive.rs  mod.rs  notification_receive.rs  ping.rs  receive_mouse.rs  receive_notifications.rs  run_command.rs  share.rs  system_volume.rs
kdeconnect/src/plugin/mpris/: cache.rs  mod.rs  remote.rs
kdeconnect/src/utils/: clipboard.rs  debounce.rs  mod.rs  open.rs
src/: config.rs  context.rs  device.rs  event.rs  main.rs  packet.rs  tls.rs
src/plugin/: battery.rs  clipboard.rs  connectivity_report.rs  mod.rs  mpris.rs  notification.rs  ping.rs  receive_mouse.rs  receive_notifications.rs
src/plugin/mpris/: mod.rs
windows-audio-manager/: Cargo.toml
windows-audio-manager/src/: lib.rs
winrt-toast/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
winrt-toast/src/: header.rs  image.rs  lib.rs  manager.rs  register.rs  text.rs  toast.rs
winrt-toast/src/content/: action.rs  header.rs  mod.rs  text.rs
