[package]
name = "kdeconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
x509-signature = { version = "0.5.0" }
socket2 = "0.4"
async-trait = "0.1.57"
base64 = "0.13.0"
uuid = { version = "1.1.2", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rcgen = { version = "0.9.3", features = ["pem", "x509-parser"] }
time = "0.3"

notify-rust = "4"
fern = { version = "0.6", features = ["colored"] }
log = "0.4.17"
chrono = "0.4.20"

trayicon = "0.1"
lru-cache = "0.1.2"
once_cell = "1.13.0"
gethostname = "0.2.3"
md5 = "0.7.0"
clipboard-win = { version = "4.4.2", features = ["std"] }
strum = { version = "0.24.1", features = ["derive"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.23.0", features = ["serialize"] }

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
    "Storage_Streams",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "UI_Notifications"
]
