[package]
name = "windows-audio-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4.17"
tokio = { version = "1.0", features = ["full"] }

[dependencies.windows]
version = "0.39.0"
features = [
    "interface",
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
]