[package]
name = "winrt-toast"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["notification", "windows", "toast", "notify"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = "1.1.0"
thiserror = "1.0.32"
url = "2.2.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Globalization",
    "UI_Notifications",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
