[package]
name = "winrt-toast"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]
description = "A toast notification library for Windows 10 and 11."
keywords = ["notification", "windows", "toast", "notify"]
categories = ["os::windows-apis", "gui"]
repository = "https://github.com/chengyuhui/kdeconnect-rs/tree/main/winrt-toast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = "1.1.0"
thiserror = "1.0.32"
url = "2.2.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Globalization",
    "UI_Notifications",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
